fixed the referenties region on mobile

--- a/sites/all/themes/idocmedia/scss/custom.scss
+++ b/sites/all/themes/idocmedia/scss/custom.scss
@@ -113,6 +113,9 @@ p{
 	}
   }
 }
+.l-referenties-region.row table tr td{
+	display:block;
+}
 }
 .block-menu-menu-idoc-menu{
 	li{
